<resources>
    <string name="app_name">BiodermaApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_activitys">homeActivitys</string>
    <string name="title_activity_product_menu">ProductMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">631438467349320</string>
    <string name="fb_login_protocol_scheme">fb631438467349320</string>

    <string name="bio_Sensibio">Sensibio</string>
    <string name="bio_Hydrabio">Hydrabio</string>
    <string name="bio_Atoderm">Atoderm</string>
    <string name="bio_Sebium">Sebium</string>
    <string name="bio_Node">Node</string>
    <string name="bio_Photoderm">Photoderm</string>
    <string name="bio_White">White Objective</string>
    <string name="bio_Cicabio">Cicabio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
